# Pong-AI

./: CMakeLists.txt  CMakePresets.json  README.md
include/: Application.hpp
include/AI/: Bot.hpp  README.md
include/Game/: Ball.hpp  Game.hpp  Paddle.hpp
include/UI/: GameWindow.hpp  MainWindow.hpp  PlotWindow.hpp  UI.hpp  Window.hpp
include/Utils/: BallCfg.hpp  ImGuiHelpers.hpp  PaddleCfg.hpp  RNG.hpp  ResourcesCfg.hpp  TrainingCfg.hpp  UI_Cfg.hpp  WindowCfg.hpp
src/: Application.cpp  CMakeLists.txt  main.cpp
src/AI/: Bot.cpp
src/Game/: Ball.cpp  Game.cpp  Paddle.cpp
src/UI/: GameWindow.cpp  MainWindow.cpp  PlotWindow.cpp  UI.cpp  Window.cpp
vendors/: CMakeLists.txt
vendors/Eigen/: CMakeLists.txt
vendors/ImGui/: CMakeLists.txt
vendors/MiniDNN/: CMakeLists.txt
vendors/SDL3/: CMakeLists.txt
vendors/SDL3_image/: CMakeLists.txt
